# fortune-fish

./: AUTHORS  Makefile.am  README  README.md  autoclean.sh  configure.ac.in
data/: Makefile.am
data/icons/: Makefile.am
data/icons/48x48/: Makefile.am
data/pixmaps/: Makefile.am
src/: Makefile.am  fortune-fish-config.c  fortune-fish-config.h  fortune-fish-settings.c  fortune-fish-settings.h  fortune-fish.c  fortune-fish.h
src/xfce/: Makefile.am  xfce4-fortune-fish-plugin.c  xfce4-fortune-fish-plugin.desktop.in.in
